force-app/main/default/objects/GSC_Case_Country_Closure_Email__mdt/GSC_Case_Country_Closure_Email__mdt.object-meta.xml
<CustomObject>
    <description>This metadata will be used by Global Service Case to auto populate the Country field based on the Case Origin of the case and to send Closure Emails for Global Service Case.
The includes the Case Origin, Country, Email Templates and From Address for Closure Emails.
For reference, check user story #14477  and #14478 on Gitlab</description>
    <label>GSC Case Country &amp; Closure Email</label>
    <pluralLabel>GSC Case Country &amp; Closure Emails</pluralLabel>
</CustomObject>