force-app/main/default/objects/GSC_Case_Country_Closure_Email__mdt/fields/Business_Hours_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Id__c</fullName>
    <description>This field is capturing the Business Hours Ids for specific country. For ref, check user story #22253 on GitLab.</description>
    <label>Business Hours Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>