force-app/main/default/objects/GSC_Case_Country_Closure_Email__mdt/fields/Customer_Response_Follow_up_Days__c.field-meta.xml
<CustomField>
    <fullName>Customer_Response_Follow_up_Days__c</fullName>
    <description>This field is capturing the Pending Reason as Customer Response&apos;s Follow Up days for specific country. For ref, check user story #22253 on GitLab.</description>
    <label>Customer Response Follow up Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>