force-app/main/default/objects/GSC_Case_Country_Closure_Email__mdt/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Country Default Settings for Global Service Case and Global Orders</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>