force-app/main/default/objects/GSC_Case_Country_Closure_Email__mdt/fields/Disable_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Disable_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the field Disable Notifications is true then no emails will be sent to customers for  GSC Closure Case, GSC Reopened Case, GSC New Child Case and Global Orders Closure Case</description>
    <label>Disable Notifications</label>
    <type>Checkbox</type>
</CustomField>