force-app/main/default/objects/GSC_Case_Country_Closure_Email__mdt/fields/Follow_up_72_Hours__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_72_Hours__c</fullName>
    <description>Auto Follow up Email Template for 72 Hours</description>
    <label>Follow up 72 Hours</label>
    <referenceTo>GSC_Auto_Follow_Up_Email_Template__mdt</referenceTo>
    <relationshipLabel>GSC Case Country &amp; Closure Emails (Follow up 72 Hours)</relationshipLabel>
    <relationshipName>GSC_Case_Country_Closure_Emails2</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>