force-app/main/default/objects/GSC_Case_Country_Closure_Email__mdt/fields/GO_Closed_Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>GO_Closed_Email_Template_Name__c</fullName>
    <label>Global Orders Closed Email Template Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>