force-app/main/default/objects/GSC_Case_Country_Closure_Email__mdt/fields/GSC_Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>GSC_Case_Origin__c</fullName>
    <label>GSC Case Origin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>