force-app/main/default/objects/GSC_Case_Country_Closure_Email__mdt/fields/GSC_Country__c.field-meta.xml
<CustomField>
    <fullName>GSC_Country__c</fullName>
    <label>GSC Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>