force-app/main/default/objects/GSC_Case_Country_Closure_Email__mdt/fields/GSC_Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>GSC_Email_Template_Name__c</fullName>
    <description>This field is used for Closure Email Template Name</description>
    <label>GSC Email Template Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>