force-app/main/default/objects/GSC_Case_Country_Closure_Email__mdt/fields/GSC_From_Address__c.field-meta.xml
<CustomField>
    <fullName>GSC_From_Address__c</fullName>
    <label>GSC From Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>