force-app/main/default/objects/GSC_Case_Country_Closure_Email__mdt/fields/GSC_New_Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>GSC_New_Email_Template_Name__c</fullName>
    <description>This field contains the data for Global Service Case Record Type and have the Email Template Names for new cases getting created if case is closed for more than 14 days for GSC Cases. Also the new cases getting created from Global Orders record type when an email is received on closed case.</description>
    <label>GSC New Email Template Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>