force-app/main/default/objects/GSC_Case_Country_Closure_Email__mdt/fields/GSC_Reopened_Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>GSC_Reopened_Email_Template_Name__c</fullName>
    <description>This field contains the data for Global Service Case Record Type and have the Email Template Names for reopened cases if case is closed for less than 14 days.</description>
    <label>GSC Reopened Email Template Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>